--- a/Server/package.json
+++ b/Server/package.json
@@ -12,7 +12,9 @@
     "socket.io": "^4.7.2",
     "cors": "^2.8.5",
     "compression": "^1.7.4",
-    "express-static-gzip": "^2.1.1"
+    "express-static-gzip": "^2.1.1",
+    "@socket.io/redis-adapter": "^8.2.0",
+    "ioredis": "^5.3.2"
   },
   "devDependencies": {
     "nodemon": "^3.0.1"
