--- a/CircuitRunners/Packages/manifest.json
+++ b/CircuitRunners/Packages/manifest.json
@@ -5,6 +5,7 @@
     "com.unity.ads": "4.4.2",
     "com.unity.ai.navigation": "1.1.6",
     "com.unity.analytics": "3.8.1",
+    "com.unity.cinemachine": "2.10.5",
     "com.unity.collab-proxy": "2.7.1",
     "com.unity.ide.rider": "3.0.36",
     "com.unity.ide.visualstudio": "2.0.22",
@@ -13,6 +14,7 @@
     "com.unity.test-framework": "1.1.33",
     "com.unity.textmeshpro": "3.0.7",
     "com.unity.timeline": "1.7.7",
+    "com.unity.toolchain.linux-x86_64": "2.0.10",
     "com.unity.ugui": "1.0.0",
     "com.unity.xr.legacyinputhelpers": "2.1.12",
     "com.unity.modules.ai": "1.0.0",
